# StudyOS

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/studyos-cli/: Cargo.toml
crates/studyos-cli/examples/: alpha_readiness.rs  record_runtime_session.rs
crates/studyos-cli/schemas/codex-app-server/v2/: ThreadStartParams.json  TurnStartParams.json
crates/studyos-cli/src/: app.rs  lib.rs  main.rs  protocol.rs  runtime.rs  tui.rs
crates/studyos-cli/tests/: ingest_end_to_end.rs  opening_prompt_uses_window.rs  runtime_live.rs  runtime_replay.rs  tour_command.rs
crates/studyos-cli/tests/fixtures/runtime/: opening-turn.jsonl
crates/studyos-cli/tests/support/: mod.rs
crates/studyos-core/: Cargo.toml
crates/studyos-core/migrations/: 0001_initial.sql  0002_resume_thread_and_recap.sql  0003_misconception_candidates.sql  0004_course_runtime_threads.sql  0005_session_course_scope.sql
crates/studyos-core/src/: config.rs  content.rs  course.rs  lib.rs  local_data.rs  session.rs  store.rs  tutor.rs  widgets.rs
docs/implementation/: 01-v1-scope.md  02-system-architecture.md  03-tui-ui-spec.md  04-rich-content-and-rendering.md  05-structured-answering.md  06-session-orchestration-and-pedagogy.md  07-storage-calendar-and-materials.md  08-app-server-integration.md  09-operability-and-testing.md  10-delivery-plan.md  11-course-content-model.md  12-launcher-and-configuration.md  README.md
examples/: deadlines.json  linear-models.toml  materials-manifest.json  probability-stats.toml  studyos-config.toml  timetable.json
scripts/: check.sh
(+6 files in other folders)
