[workspace]
members = [
    "crates/studyos-cli",
    "crates/studyos-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
repository = "https://github.com/georgepullen/StudyOS"
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
