[package]
name = "studyos-cli"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde_json = "1.0.145"
studyos-core = { path = "../studyos-core" }
toml = "0.8.23"
