[package]
name = "studyos-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "parsing", "local-offset"] }
toml = "0.8.23"
